Wed May 15 16:34:58 1996  layer  (layer at HOBART)

	* fi-indent.el: fix the indent spec for destructuring-bind

Wed May 15 16:22:47 1996  Kevin Layer  <layer@freezer>

	* fi-emacs19.el: make installation of menubar optional (defaults
	  is the same as previous behaviour)
	* fi-keys.el: define-key hacking for lemacs' way of doing things
	* fi-site-init.el: new way of loading, with fi::load, which
	  compiles any of the files if they are not already compiled.  This
	  was primarily done because on windows people might not have
	  `make', to be able to build all the .elc files.
	* fi-version.el: define "on-ms-windows"

*******************************************************************************
2.0.19 public release
*******************************************************************************

*******************************************************************************
4.3.devel.18 (aka 4.3.final)

Tue Mar 26 19:00:37 1996  George Jacob  <georgej@lava.franz.com (George Jacob)>

	* Makefile: Switch to using emacs, to build, rather than xemacs-19.13.

*******************************************************************************
Mon Mar 25 18:14:51 1996  Steve Haflich  <smh@vapor>

	* Change /usr/ucb/rdist to /usr/local/rdist, which sa maintains.

Mon Mar 25 15:36:35 1996  Steve Haflich  <smh@vapor>

	* Makefile: Updated the rdist list.
	* fi-indent.el:  Added property for def-tr.

*******************************************************************************
4.3.devel.15

Thu Mar  7 02:56:29 1996  George Jacob  <georgej@lava>

	* eli/Makefile: Compile using xemacs-19.13 (available on all
	platforms)
*******************************************************************************

Fri Jan  5 11:03:17 1996  Steve Haflich  <smh@vapor>

	* eli/Makefile:	Removed ore hosts from rdist rule.

	* eli/fi-emacs19.el:
	* eli/fi-xemacs.el:
	  Removed connected-to-epoch-p conditionalizations.  The menu item availability
	  code is still flawed and needs rewriting.
